k8s-files/integrating-circleci-on-noted-webapp-noted-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: integrating-circleci-on-noted-webapp-noted-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/integrating-circleci-on-noted-webapp-noted-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/integrating-circleci-on-noted-webapp-noted-network: "true"
